[package]
edition = "2024"
name = "landmass"
version = "0.9.1"

description = "A navigation system for video game characters to walk around levels."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "system", "pathfinding", "avoidance"]

[dependencies]
dodgy_2d = { git = "https://github.com/JulienLavocat/dodgy", rev = "a3c36fb9f5c5b70f8eb3c4439be25600a974deea" }
disjoint = "0.8.0"
glam = { version = "0.30.5", features = ["serde"] }
kdtree = "0.7.0"
geo = "0.31.0"
slotmap = { version = "1.0.7", features = ["serde"] }
thiserror = "2.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive", "std", "rc"] }
bincode = { version = "2.0.1", features = ["derive"] }
log = "0.4.28"

[dev-dependencies]
googletest = "0.14.2"

[features]
# Allows you to access avoidance data for an agent when debugging.
debug-avoidance = ["dodgy_2d/debug"]
